tests/fixtures/errors/invalid_preproc_expr_unsupported_parens.puml
@startuml
!if (1)
Alice -> Bob: unsupported parens
!endif
@enduml
